--- a/troubleshoot-issues.html.md.erb
+++ b/troubleshoot-issues.html.md.erb
@@ -219,7 +219,7 @@ For more information on configuring `PodDisruptionBudgets` using a spec file see
 
 **Solution**
 
-`.spec.replicas` sets the total amount replicas that are available in your application. 
+`.spec.replicas` sets the total amount of replicas that are available in your application. 
 `PodDisruptionBudgets` specifies the amount of replicas, proportional to that total, that must be available in your application, regardless of downtime. 
 When the number of replicas configured in `.spec.replicas` is greater than the number of replicas set in `PodDisruptionBudgets`, disruptions are able to occur.  
 For more information, see [How Disruption Budgets Work](httops://kubernetes.io/docs/concepts/workloads/pods/disruptions/#how-disruption-budgets-work) in the Kubernetes documentation. 
