--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -21,6 +21,7 @@ To upgrade to PKS v1.1.1, follow the procedures in [Upgrade PKS](upgrade-pks.htm
 - UAA and Security enhancements
 - NSX-T patches
 - Telemetry patch
+- Now supports all versions along the Operations Manager v2.1 series
 - Kubernetes 1.10.4
 
 ## <a id="v1.1.0"></a>v1.1.0
